--- a/HomeManager/View/ucTitlePerson.xaml
+++ b/HomeManager/View/ucTitlePerson.xaml
@@ -35,9 +35,18 @@
                         CommandParameter="{Binding PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
                         Header="Afmelden" />
                     <MenuItem Header="Mijn Info" />
-                    <MenuItem Command="{Binding cmdUnLockUser}" CommandParameter="{Binding}" Header="Ontgrendel een computer" />
-                    <MenuItem Command="{Binding cmdBackup}" CommandParameter="{Binding}" Header="Back-up maken" />
-                    <MenuItem Header="Logs raadplegen" />
+                    <MenuItem
+                        Command="{Binding cmdUnLockUser}"
+                        CommandParameter="{Binding}"
+                        Header="Ontgrendel een computer" />
+                    <MenuItem
+                        Command="{Binding cmdBackup}"
+                        CommandParameter="{Binding}"
+                        Header="Back-up maken" />
+                    <MenuItem 
+                        Command="{Binding cmdLogs}"
+                        CommandParameter="{Binding}"
+                        Header="Logs raadplegen" />
                     <MenuItem Header="Exceptions raadplegen" />
                     <MenuItem Header="Exception emails beheren" />
                 </ContextMenu>
