--- a/HomeManager/Resources/StyleHamburgerMenu.xaml
+++ b/HomeManager/Resources/StyleHamburgerMenu.xaml
@@ -2,6 +2,7 @@
 
 
 
+    <Brush x:Key="MenuColorText">White</Brush>
 
 
     <Storyboard x:Key="ShowMenu">
@@ -187,11 +188,19 @@
 
 
     <!--  Style For contentpresenter  -->
-    <Style x:Key="MenuPresenter" TargetType="ContentPresenter">
-        <Setter Property="Margin" Value="6,0,0,0" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-    </Style>
+<Style x:Key="MenuPresenter" TargetType="ContentPresenter">
+    <Setter Property="Margin" Value="6,0,0,0" />
+    <Setter Property="HorizontalAlignment" Value="Left" />
+    <Setter Property="VerticalAlignment" Value="Center" />
+    <Setter Property="ContentTemplate">
+        <Setter.Value>
+            <DataTemplate>
+                <TextBlock Text="{Binding}" Foreground="White"/>
+            </DataTemplate>
+        </Setter.Value>
+    </Setter>
+</Style>
+
 
 
     <Style x:Key="myExpanderPerson" TargetType="Button">
@@ -417,6 +426,7 @@
     </Style>
 
 
+    <!-- Stijl voor de knop -->
     <Style x:Key="myMenuTandwiel" TargetType="Button">
         <Setter Property="Margin" Value="35,5,0,5" />
         <Setter Property="Foreground" Value="{StaticResource myWerkBalk}" />
@@ -429,10 +439,17 @@
                                 <ColumnDefinition Width="20" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
+                            <!-- Icon -->
                             <Path Data="{StaticResource myPathSetting}" Style="{StaticResource MenuIcon}" />
-                            <ContentPresenter Grid.Column="1" Style="{StaticResource MenuPresenter}" />
+                            <!-- ContentPresenter met een ingesloten TextBlock -->
+                            <ContentPresenter Grid.Column="1" RecognizesAccessKey="True">
+                                <ContentPresenter.Content>
+                                    <TextBlock Text="{TemplateBinding Content}" Foreground="{StaticResource MenuColorText}"/>
+                                </ContentPresenter.Content>
+                            </ContentPresenter>
                         </Grid>
                     </Border>
+                    <!-- Mouse-over effecten -->
                     <ControlTemplate.Triggers>
                         <Trigger SourceName="HeaderBorder" Property="IsMouseOver" Value="True">
                             <Setter Property="Cursor" Value="Hand" />
@@ -538,10 +555,14 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsPersonenViewModel"
-                                    Content="Personen"
-                                    Style="{StaticResource myExpanderPerson}" />
+                                    CommandParameter="clsPersonenViewModel"                     
+                                    Style="{StaticResource myExpanderPerson}">
+                                    <Button.Content>
+                                        <TextBlock Text="Personen" Foreground="{StaticResource MenuColorText}"/>
+                                    </Button.Content>
+                                </Button>
                             </StackPanel>
+
 
                             <ContentPresenter
                                 x:Name="ExpanderContent"
@@ -612,9 +633,12 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsCategorieViewModel"
-                                    Content="Budget"
-                                    Style="{StaticResource myExpanderBudget}" />
+                                    CommandParameter="clsOverzichtViewModel"                             
+                                    Style="{StaticResource myExpanderBudget}">
+                                    <Button.Content>
+                                    <TextBlock Text="Budget" Foreground="{StaticResource MenuColorText}"/>
+                                    </Button.Content>
+                                </Button>
                             </StackPanel>
 
                             <ContentPresenter
@@ -640,9 +664,9 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Expander">
                     <Border
-                        Background="Transparent"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}">
+                    Background="Transparent"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -653,15 +677,15 @@
                                 <ColumnDefinition Width="auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel
-                                Grid.Row="0"
-                                Grid.Column="0"
-                                Grid.ColumnSpan="2"
-                                Orientation="Horizontal">
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2"
+                            Orientation="Horizontal">
                                 <ToggleButton
-                                    x:Name="ExpanderToggleButton"
-                                    Background="Transparent"
-                                    BorderThickness="0"
-                                    IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}">
+                                x:Name="ExpanderToggleButton"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}">
                                     <ToggleButton.Template>
                                         <ControlTemplate TargetType="ToggleButton">
                                             <StackPanel Orientation="Horizontal">
@@ -683,19 +707,23 @@
                                         </ControlTemplate>
                                     </ToggleButton.Template>
                                 </ToggleButton>
+                                <!-- Button met wit gemaakte tekst -->
                                 <Button
-                                    Margin="10,0,0,0"
-                                    Command="{Binding NavCommand}"
-                                    CommandParameter="clsCategorieViewModel"
-                                    Content="ToDo"
-                                    Style="{StaticResource myExpanderTodo}" />
+                                Margin="10,0,0,0"
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsCategorieViewModel"
+                                Style="{StaticResource myExpanderTodo}">
+                                    <Button.Content>
+                                        <TextBlock Text="ToDo" Foreground="{StaticResource MenuColorText}"/>
+                                    </Button.Content>
+                                </Button>
                             </StackPanel>
 
                             <ContentPresenter
-                                x:Name="ExpanderContent"
-                                Grid.Row="1"
-                                Grid.ColumnSpan="2"
-                                Visibility="Collapsed" />
+                            x:Name="ExpanderContent"
+                            Grid.Row="1"
+                            Grid.ColumnSpan="2"
+                            Visibility="Collapsed" />
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -707,6 +735,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+
 
     <Style x:Key="myHamburgerSecurity" TargetType="Expander">
         <Setter Property="Margin" Value="0,5,0,5" />
@@ -760,9 +789,12 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsCredentialManagementViewModel"
-                                    Content="Security"
-                                    Style="{StaticResource myExpanderSecurity}" />
+                                    CommandParameter="clsCredentialManagementViewModel"                        
+                                    Style="{StaticResource myExpanderSecurity}">
+                                    <Button.Content>
+                                        <TextBlock Text="Security" Foreground="{StaticResource MenuColorText}"/>
+                                    </Button.Content>
+                                </Button>
                             </StackPanel>
 
                             <ContentPresenter
