--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -1,4 +1,4 @@
-<UserControl
+﻿<UserControl
     x:Class="HomeManager.View.ucPersoon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,6 +12,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
+
     <UserControl.Resources>
         <Converters:DateOnlyToDateTimeConverter x:Key="DateOnlyToDateTimeConverter" />
     </UserControl.Resources>
@@ -40,13 +41,12 @@
                         Data="{StaticResource myPathPeople}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock Style="{StaticResource TitleBarText}" Text="Persoon" />
+                    <TextBlock
+                        Style="{StaticResource TitleBarText}"
+                        Text="Persoon" />
 
                 </StackPanel>
-                <uc:ucWerkBalk
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Loaded="ucWerkBalk_Loaded" />
+                <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" Loaded="ucWerkBalk_Loaded" />
             </Grid>
         </Border>
 
@@ -88,16 +88,10 @@
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Border
-
-                                Width="60"
-                                Height="60"
-                                HorizontalAlignment="Left"
-
                                 Width="205"
                                 Margin="5"
                                 Padding="2"
                                 Background="LightGray"
-
                                 BorderBrush="Gray"
                                 BorderThickness="1"
                                 CornerRadius="8">
@@ -167,17 +161,6 @@
                     Text="Foto"
                     TextAlignment="Right" />
 
-
-
-                            <StackPanel Margin="10,0,0,0" Orientation="Vertical">
-                                <TextBlock
-                                    Margin="0,5,0,8"
-                                    FontWeight="Bold"
-                                    Text="{Binding Naam}" />
-                                <TextBlock Margin="0,8,0,0" Text="{Binding Voornaam}" />
-                            </StackPanel>
-                        </StackPanel>
-
                 <StackPanel
                     Grid.Row="4"
                     Grid.Column="3"
@@ -193,7 +176,6 @@
                         <Border.Background>
                             <ImageBrush ImageSource="{Binding MijnSelectedItem.Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
                         </Border.Background>
-
                     </Border>
                     <Button Command="{Binding cmdUploadPicture}" Style="{StaticResource UploadPersoonButton}" />
                 </StackPanel>
