--- a/HomeManager/Resources/StyleHamburgerMenu.xaml
+++ b/HomeManager/Resources/StyleHamburgerMenu.xaml
@@ -188,18 +188,18 @@
 
 
     <!--  Style For contentpresenter  -->
-<Style x:Key="MenuPresenter" TargetType="ContentPresenter">
-    <Setter Property="Margin" Value="6,0,0,0" />
-    <Setter Property="HorizontalAlignment" Value="Left" />
-    <Setter Property="VerticalAlignment" Value="Center" />
-    <Setter Property="ContentTemplate">
-        <Setter.Value>
-            <DataTemplate>
-                <TextBlock Text="{Binding}" Foreground="White"/>
-            </DataTemplate>
-        </Setter.Value>
-    </Setter>
-</Style>
+    <Style x:Key="MenuPresenter" TargetType="ContentPresenter">
+        <Setter Property="Margin" Value="6,0,0,0" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <TextBlock Foreground="White" Text="{Binding}" />
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 
 
@@ -426,7 +426,7 @@
     </Style>
 
 
-    <!-- Stijl voor de knop -->
+    <!--  Stijl voor de knop  -->
     <Style x:Key="myMenuTandwiel" TargetType="Button">
         <Setter Property="Margin" Value="35,5,0,5" />
         <Setter Property="Foreground" Value="{StaticResource myWerkBalk}" />
@@ -439,17 +439,17 @@
                                 <ColumnDefinition Width="20" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <!-- Icon -->
+                            <!--  Icon  -->
                             <Path Data="{StaticResource myPathSetting}" Style="{StaticResource MenuIcon}" />
-                            <!-- ContentPresenter met een ingesloten TextBlock -->
+                            <!--  ContentPresenter met een ingesloten TextBlock  -->
                             <ContentPresenter Grid.Column="1" RecognizesAccessKey="True">
                                 <ContentPresenter.Content>
-                                    <TextBlock Text="{TemplateBinding Content}" Foreground="{StaticResource MenuColorText}"/>
+                                    <TextBlock Foreground="{StaticResource MenuColorText}" Text="{TemplateBinding Content}" />
                                 </ContentPresenter.Content>
                             </ContentPresenter>
                         </Grid>
                     </Border>
-                    <!-- Mouse-over effecten -->
+                    <!--  Mouse-over effecten  -->
                     <ControlTemplate.Triggers>
                         <Trigger SourceName="HeaderBorder" Property="IsMouseOver" Value="True">
                             <Setter Property="Cursor" Value="Hand" />
@@ -555,10 +555,10 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsPersonenViewModel"                     
+                                    CommandParameter="clsPersonenViewModel"
                                     Style="{StaticResource myExpanderPerson}">
                                     <Button.Content>
-                                        <TextBlock Text="Personen" Foreground="{StaticResource MenuColorText}"/>
+                                        <TextBlock Foreground="{StaticResource MenuColorText}" Text="Personen" />
                                     </Button.Content>
                                 </Button>
                             </StackPanel>
@@ -633,10 +633,10 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsOverzichtViewModel"                             
+                                    CommandParameter="clsOverzichtViewModel"
                                     Style="{StaticResource myExpanderBudget}">
                                     <Button.Content>
-                                    <TextBlock Text="Budget" Foreground="{StaticResource MenuColorText}"/>
+                                        <TextBlock Foreground="{StaticResource MenuColorText}" Text="Budget" />
                                     </Button.Content>
                                 </Button>
                             </StackPanel>
@@ -664,9 +664,9 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Expander">
                     <Border
-                    Background="Transparent"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}">
+                        Background="Transparent"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -677,15 +677,15 @@
                                 <ColumnDefinition Width="auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Grid.ColumnSpan="2"
-                            Orientation="Horizontal">
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Orientation="Horizontal">
                                 <ToggleButton
-                                x:Name="ExpanderToggleButton"
-                                Background="Transparent"
-                                BorderThickness="0"
-                                IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}">
+                                    x:Name="ExpanderToggleButton"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}">
                                     <ToggleButton.Template>
                                         <ControlTemplate TargetType="ToggleButton">
                                             <StackPanel Orientation="Horizontal">
@@ -707,23 +707,23 @@
                                         </ControlTemplate>
                                     </ToggleButton.Template>
                                 </ToggleButton>
-                                <!-- Button met wit gemaakte tekst -->
+                                <!--  Button met wit gemaakte tekst  -->
                                 <Button
-                                Margin="10,0,0,0"
-                                Command="{Binding NavCommand}"
-                                CommandParameter="clsCategorieViewModel"
-                                Style="{StaticResource myExpanderTodo}">
+                                    Margin="10,0,0,0"
+                                    Command="{Binding NavCommand}"
+                                    CommandParameter="clsCategorieViewModel"
+                                    Style="{StaticResource myExpanderTodo}">
                                     <Button.Content>
-                                        <TextBlock Text="ToDo" Foreground="{StaticResource MenuColorText}"/>
+                                        <TextBlock Foreground="{StaticResource MenuColorText}" Text="ToDo" />
                                     </Button.Content>
                                 </Button>
                             </StackPanel>
 
                             <ContentPresenter
-                            x:Name="ExpanderContent"
-                            Grid.Row="1"
-                            Grid.ColumnSpan="2"
-                            Visibility="Collapsed" />
+                                x:Name="ExpanderContent"
+                                Grid.Row="1"
+                                Grid.ColumnSpan="2"
+                                Visibility="Collapsed" />
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -789,10 +789,10 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsCredentialManagementViewModel"                        
+                                    CommandParameter="clsCredentialManagementViewModel"
                                     Style="{StaticResource myExpanderSecurity}">
                                     <Button.Content>
-                                        <TextBlock Text="Security" Foreground="{StaticResource MenuColorText}"/>
+                                        <TextBlock Foreground="{StaticResource MenuColorText}" Text="Security" />
                                     </Button.Content>
                                 </Button>
                             </StackPanel>
